Change log file location for easier access